# tf-playground

./: README.md  stack.yaml  tf-playground.cabal
data/: iris_test.csv  iris_train.csv
src/: Iris.hs  Main.hs
