name:                tf-playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tf-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tf-playground
  hs-source-dirs:      src
  other-modules:       Iris
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tensorflow
                     , tensorflow-ops
                     , tensorflow-core-ops
                     , tensorflow-logging
                     , tensorflow-mnist
                     , proto-lens
                     , vector
                     , cassava
                     , bytestring
                     , random-shuffle
                     , either
